--- a/package.json
+++ b/package.json
@@ -3,10 +3,13 @@
   "version": "1.0.0",
   "main": "webpack.config.js",
   "scripts": {
+    "build": "webpack",
     "start": "webpack serve --open",
-    "build": "webpack --mode production",
-    "watch": "tsc -watch -p ./"
-
+    "format": "prettier --write \"src/**/*.{ts,js,css,html}\"",
+    "test": "mocha --require ts-node/register --recursive test/**/*.ts",
+    "lint": "eslint 'src/**/*.{ts,js}'",
+    "prepare": "husky install",
+    "lint-staged": "lint-staged"
   },
   "repository": {
     "type": "git",
@@ -14,15 +17,20 @@
   },
   "private": true,
   "devDependencies": {
-    "css-loader": "^7.1.2",
-    "gh-pages": "^6.1.1",
-    "live-server": "^1.2.2",
-    "prettier": "3.3.3",
-    "sass": "^1.78.0",
-    "sass-loader": "^16.0.1",
-    "style-loader": "^4.0.0",
+    "@eslint/js": "^9.10.0",
+    "@types/chai": "^4.3.19",
+    "@types/mocha": "^10.0.8",
+    "@typescript-eslint/eslint-plugin": "^8.6.0",
+    "@typescript-eslint/parser": "^8.6.0",
+    "chai": "^5.1.1",
+    "eslint": "^9.10.0",
+    "globals": "^15.9.0",
+    "lint-staged": "^15.2.10",
+    "prettier": "^3.3.3",
     "ts-loader": "^9.5.1",
-    "typescript": "^5.5.4",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.6.2",
+    "typescript-eslint": "^8.6.0",
     "webpack": "^5.94.0",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^5.1.0"
