--- a/package.json
+++ b/package.json
@@ -1,38 +1,44 @@
 {
   "name": "lab-app",
   "version": "1.0.0",
+  "description": "",
   "main": "webpack.config.js",
   "scripts": {
+    "build": "webpack",
     "start": "webpack serve --open",
-    "build": "webpack --mode production",
-    "watch": "tsc -watch -p ./"
-
+    "format": "prettier --write \"src/**/*.{ts,js,css,html}\"",
+    "test": "mocha --require ts-node/register test/**.ts",
+    "lint": "eslint 'src/**/*.{ts,js}'",
+    "prepare": "husky && husky install",
+    "start:ts": "ts-node src/app.ts",
+    "build:ts": "tsc"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/Computer-Science-Department-ChNU/javascript-frameworks.git"
+    "url": "https://github.com/Computer-Science-Department-ChNU/javascript-frameworks.git"
   },
   "private": true,
   "devDependencies": {
-    "css-loader": "^7.1.2",
-    "gh-pages": "^6.1.1",
-    "live-server": "^1.2.2",
-    "prettier": "3.3.3",
-    "sass": "^1.78.0",
-    "sass-loader": "^16.0.1",
-    "style-loader": "^4.0.0",
+    "@eslint/js": "^9.10.0",
+    "@types/chai": "^4.0.0",
+    "@types/mocha": "^10.0.9",
+    "@typescript-eslint/eslint-plugin": "^8.6.0",
+    "@typescript-eslint/parser": "^8.6.0",
+    "chai": "^4.1.1",
+    "eslint": "^9.10.0",
+    "globals": "^15.9.0",
+    "husky": "^8.0.0",
+    "mocha": "^10.7.3",
+    "prettier": "^3.3.3",
     "ts-loader": "^9.5.1",
+    "ts-node": "^10.9.2",
     "typescript": "^5.5.4",
+    "typescript-eslint": "^8.6.0",
     "webpack": "^5.94.0",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^5.1.0"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/Computer-Science-Department-ChNU/javascript-frameworks/issues"
-  },
-  "homepage": "https://github.com/Computer-Science-Department-ChNU/javascript-frameworks#readme",
-  "description": ""
+  "ignores": [
+    ".node_modules/*"
+  ]
 }
