--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,11 +1,12 @@
 {
   "compilerOptions": {
-    "target": "es5",
-    "module": "es6",
+    "target": "es2016",
+    "module": "commonjs",
     "removeComments": true,
     "strict": true,
     "esModuleInterop": true,
     "outDir": "./dist",
+
     "sourceMap": true
   },
   "include": [
